--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlinVersion = "1.4.21"
+    ext.kotlin_version = "1.4.21"
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,8 +26,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '2.2.6'
-    retrofitVersion = '2.9.0'
-    archLifecycleVersion = '2.2.0'
+    room_version = '2.2.6'
+    retrofit_version = '2.9.0'
+    archLifecycle_version = '2.2.0'
     ext.logging_interceptor_version = '4.9.0'
+    ext.kotlin_coroutines_version = "1.3.9"
+    ext.lifecycle_version = "2.2.0"
 }
