--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ ext {
     ext.logging_interceptor_version = '4.9.0'
     ext.kotlin_coroutines_version = "1.3.9"
     ext.lifecycle_version = "2.2.0"
+    ext.koin_version = "2.1.6"
 }
