--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
@@ -11,16 +11,16 @@ def API_KEY = '"' + key + '"' ?: '"Define your TheMovieDB API KEY!"'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.codeart.filmskuy"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
 
         each { type ->
             type.buildConfigField STRING, 'key', API_KEY
@@ -45,11 +45,13 @@ android {
 }
 
 dependencies {
-    //IMPORTANT
-    implementation project(":core")
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // IMPORTANT
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // DEFAULT
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // LIFECYCLE
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
