--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -1,30 +1,23 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.dynamic-feature'
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
 }
 apply from: '../shared_dependencies.gradle'
 
-def STRING = 'String'
-def API_KEY = '"' + key + '"' ?: '"Define your TheMovieDB API KEY!"'
-
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.codeart.filmskuy"
+        applicationId "com.codeart.filmskuy.favorite"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        each { type ->
-            type.buildConfigField STRING, 'key', API_KEY
-        }
     }
     buildTypes {
         release {
@@ -42,15 +35,24 @@ android {
     buildFeatures {
         viewBinding = true
     }
-    dynamicFeatures = [':favorite']
 }
 
 dependencies {
-    //IMPORTANT
+    // IMPORTANT
+    implementation project(":app")
     implementation project(":core")
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // LIFECYCLE
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // DEFAULT
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
 }
