--- a/core/build.gradle
+++ b/core/build.gradle
@@ -53,4 +53,8 @@ dependencies {
 
     // LIFECYCLE
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // SQL CIPHER
+    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
 }
